--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -16657,3 +16657,84 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-idea-rhel8
+  tag: 3.8-6
+  taskId: 54268275
+  timeCreate: Fri Jul 28 21:57:59 2023
+  timeStart: Fri Jul 28 21:58:25 2023
+  timeFinish: Fri Jul 28 22:13:02 2023
+  timeWait: 0 mins
+  timeBuild: 14 mins
+  timeTotal: 15 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.8-12
+  taskId: 54275803
+  timeCreate: Sat Jul 29 11:50:36 2023
+  timeStart: Sat Jul 29 11:50:42 2023
+  timeFinish: Sat Jul 29 12:04:51 2023
+  timeWait: 0 mins
+  timeBuild: 14 mins
+  timeTotal: 14 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.8-11
+  taskId: 54275812
+  timeCreate: Sat Jul 29 11:53:17 2023
+  timeStart: Sat Jul 29 11:53:47 2023
+  timeFinish: Sat Jul 29 12:00:40 2023
+  timeWait: 0 mins
+  timeBuild: 6 mins
+  timeTotal: 7 mins
+- name: devspaces-traefik-rhel8
+  tag: 3.8-13
+  taskId: 54275814
+  timeCreate: Sat Jul 29 11:55:05 2023
+  timeStart: Sat Jul 29 11:55:18 2023
+  timeFinish: Sat Jul 29 12:18:16 2023
+  timeWait: 0 mins
+  timeBuild: 22 mins
+  timeTotal: 23 mins
+- name: devspaces-operator
+  tag: 3.8-14
+  taskId: 54275815
+  timeCreate: Sat Jul 29 11:55:12 2023
+  timeStart: Sat Jul 29 11:55:19 2023
+  timeFinish: Sat Jul 29 12:09:53 2023
+  timeWait: 0 mins
+  timeBuild: 14 mins
+  timeTotal: 14 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.8-22
+  taskId: 54275838
+  timeCreate: Sat Jul 29 12:05:03 2023
+  timeStart: Sat Jul 29 12:05:12 2023
+  timeFinish: Sat Jul 29 12:13:36 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.8-16
+  taskId: 54275839
+  timeCreate: Sat Jul 29 12:05:07 2023
+  timeStart: Sat Jul 29 12:05:13 2023
+  timeFinish: Sat Jul 29 12:22:40 2023
+  timeWait: 0 mins
+  timeBuild: 17 mins
+  timeTotal: 17 mins
+- name: devspaces-server-rhel8
+  tag: 3.8-15
+  taskId: 54275849
+  timeCreate: Sat Jul 29 12:11:09 2023
+  timeStart: Sat Jul 29 12:11:19 2023
+  timeFinish: Sat Jul 29 12:18:57 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 7 mins
+- name: devspaces-operator-bundle
+  tag: 3.8-49
+  taskId: 54275908
+  timeCreate: Sat Jul 29 12:30:43 2023
+  timeStart: Sat Jul 29 12:31:01 2023
+  timeFinish: Sat Jul 29 12:34:47 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
