--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -576,6 +576,11 @@
       "3.9": "3.1.6",
       "3.x": "3.1.6"
     },
+    "kubedock": {
+      "3.8": "0.11.0",
+      "3.9": "0.11.0",
+      "3.x": "0.11.0"
+    },
     "DEV_WORKSPACE_OPERATOR_TAG": {
       "3.7": "0.21",
       "3.8": "0.21",
