--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -15,7 +15,7 @@
           "7.72.x",
           "7.71.x"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "upstream_branch": [
@@ -45,7 +45,7 @@
           "7.72.x",
           "7.71.x"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "upstream_branch": [
@@ -75,7 +75,7 @@
           "7.72.x",
           "7.71.x"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "upstream_branch": [
@@ -105,7 +105,7 @@
           "7.72.x",
           "7.71.x"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "upstream_branch": [
@@ -135,7 +135,7 @@
           "7.72.x",
           "7.71.x"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "upstream_branch": [
@@ -165,7 +165,7 @@
           "7.72.x",
           "7.71.x"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "upstream_branch": [
@@ -195,7 +195,7 @@
           "7.72.x",
           "7.71.x"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "upstream_branch": [
@@ -225,7 +225,7 @@
           "devspaces-3.8-rhel-8",
           "devspaces-3.8-rhel-8"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "upstream_branch": [
@@ -255,7 +255,7 @@
           "devspaces-3.8-rhel-8",
           "devspaces-3.8-rhel-8"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "upstream_branch": [
@@ -285,7 +285,7 @@
           "20221111",
           "20221111"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "upstream_branch": [
@@ -315,7 +315,7 @@
           "v2.9.6",
           "v2.9.6"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "upstream_branch": [
@@ -337,7 +337,7 @@
         "disabled": true
       },
       "3.8": {
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "disabled": false
@@ -359,7 +359,7 @@
           "devspaces-3.8-rhel-8",
           "devspaces-3.8-rhel-8"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "upstream_branch": [
@@ -393,7 +393,7 @@
           "7.71.x"
         ],
         "node_version": "16.13.2",
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "upstream_branch": [
@@ -425,7 +425,7 @@
           "7.72.x",
           "7.71.x"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "upstream_branch": [
@@ -447,7 +447,7 @@
         "disabled": true
       },
       "3.8": {
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "disabled": false
@@ -461,7 +461,7 @@
         "disabled": true
       },
       "3.8": {
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "disabled": false
@@ -475,7 +475,7 @@
         "disabled": true
       },
       "3.8": {
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "disabled": false
@@ -489,7 +489,7 @@
         "disabled": true
       },
       "3.8": {
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "disabled": false
@@ -503,7 +503,7 @@
         "disabled": true
       },
       "3.8": {
-        "disabled": false
+        "disabled": true
       },
       "3.9": {
         "disabled": false
@@ -521,15 +521,15 @@
       },
       "3.8": {
         "CSV_VERSION": "3.8.0",
-        "CSV_VERSION_PREV": "3.7.0"
+        "CSV_VERSION_PREV": "3.7.1"
       },
       "3.9": {
         "CSV_VERSION": "3.9.0",
-        "CSV_VERSION_PREV": "3.7.0"
+        "CSV_VERSION_PREV": "3.7.1"
       },
       "3.x": {
         "CSV_VERSION": "3.9.0",
-        "CSV_VERSION_PREV": "3.7.0"
+        "CSV_VERSION_PREV": "3.7.1"
       }
     }
   },
@@ -584,7 +584,7 @@
     },
     "@eclipse-che/plugin-registry-generator": {
       "3.7": "7.67.0",
-      "3.8": "7.71.0",
+      "3.8": "7.72.0",
       "3.9": "next",
       "3.x": "next"
     },
