--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -16009,3 +16009,57 @@
   timeWait: 16 mins
   timeBuild: 8 mins
   timeTotal: 25 mins
+- name: devspaces-idea-rhel8
+  tag: 3.7-11.1690901890
+  taskId: 54339851
+  timeCreate: Tue Aug 1 10:58:10 2023
+  timeStart: Tue Aug 1 11:23:17 2023
+  timeFinish: Tue Aug 1 11:42:44 2023
+  timeWait: 25 mins
+  timeBuild: 19 mins
+  timeTotal: 44 mins
+- name: devspaces-udi-rhel8
+  tag: 3.7-18.1690901895
+  taskId: 54339854
+  timeCreate: Tue Aug 1 10:58:15 2023
+  timeStart: Tue Aug 1 11:24:05 2023
+  timeFinish: Tue Aug 1 12:09:17 2023
+  timeWait: 25 mins
+  timeBuild: 45 mins
+  timeTotal: 71 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.7-47.1690904576
+  taskId: 54341490
+  timeCreate: Tue Aug 1 11:42:56 2023
+  timeStart: Tue Aug 1 12:45:15 2023
+  timeFinish: Tue Aug 1 13:13:32 2023
+  timeWait: 62 mins
+  timeBuild: 28 mins
+  timeTotal: 90 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.7-26
+  taskId: 54544857
+  timeCreate: Wed Aug 9 12:14:03 2023
+  timeStart: Wed Aug 9 12:25:31 2023
+  timeFinish: Wed Aug 9 12:44:53 2023
+  timeWait: 11 mins
+  timeBuild: 19 mins
+  timeTotal: 30 mins
+- name: devspaces-server-rhel8
+  tag: 3.7-27
+  taskId: 54544872
+  timeCreate: Wed Aug 9 12:15:15 2023
+  timeStart: Wed Aug 9 12:35:43 2023
+  timeFinish: Wed Aug 9 12:45:16 2023
+  timeWait: 20 mins
+  timeBuild: 9 mins
+  timeTotal: 30 mins
+- name: devspaces-operator-bundle
+  tag: 3.7-265
+  taskId: 54545239
+  timeCreate: Wed Aug 9 12:39:14 2023
+  timeStart: Wed Aug 9 12:39:33 2023
+  timeFinish: Wed Aug 9 12:43:32 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
