CRW-4639 use main when stable 7.yy.x branch not yet available (#992)
* CRW-4639, Updating math for Dev Spaces 3.9+, updating to use max Che release or main branch otherwise, updating job-config.json with these changes. Improved logic of branch update command. Removed outdated code.

* add extra replacement rule for freshly copied 3.x -> 3.yy content

Change-Id: I2606dcfb0750f3c9064a68fe98cda1602ccab6a9
Signed-off-by: Nick Boldt <nboldt@redhat.com>

* Updating should check for '.x' and adding new should check for 'main' and we can keep the code concise.

* Update product/updateVersionAndRegistryTags.sh

Co-authored-by: Nick Boldt <nboldt@redhat.com>

* Update product/updateVersionAndRegistryTags.sh

Co-authored-by: Nick Boldt <nboldt@redhat.com>

---------

Signed-off-by: Nick Boldt <nboldt@redhat.com>
Co-authored-by: Nick Boldt <nboldt@redhat.com>

--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -13,14 +13,14 @@
       "3.8": {
         "upstream_branch": [
           "7.72.x",
-          "7.71.x"
+          "main"
         ],
         "disabled": true
       },
       "3.9": {
         "upstream_branch": [
-          "7.75.x",
-          "7.74.x"
+          "7.74.x",
+          "main"
         ],
         "disabled": false
       },
@@ -43,14 +43,14 @@
       "3.8": {
         "upstream_branch": [
           "7.72.x",
-          "7.71.x"
+          "main"
         ],
         "disabled": true
       },
       "3.9": {
         "upstream_branch": [
-          "7.75.x",
-          "7.74.x"
+          "7.74.x",
+          "main"
         ],
         "disabled": false
       },
@@ -73,14 +73,14 @@
       "3.8": {
         "upstream_branch": [
           "7.72.x",
-          "7.71.x"
+          "main"
         ],
         "disabled": true
       },
       "3.9": {
         "upstream_branch": [
-          "7.75.x",
-          "7.74.x"
+          "7.74.x",
+          "main"
         ],
         "disabled": false
       },
@@ -103,14 +103,14 @@
       "3.8": {
         "upstream_branch": [
           "7.72.x",
-          "7.71.x"
+          "main"
         ],
         "disabled": true
       },
       "3.9": {
         "upstream_branch": [
-          "7.75.x",
-          "7.74.x"
+          "7.74.x",
+          "main"
         ],
         "disabled": false
       },
@@ -133,14 +133,14 @@
       "3.8": {
         "upstream_branch": [
           "7.72.x",
-          "7.71.x"
+          "main"
         ],
         "disabled": true
       },
       "3.9": {
         "upstream_branch": [
-          "7.75.x",
-          "7.74.x"
+          "7.74.x",
+          "main"
         ],
         "disabled": false
       },
@@ -163,14 +163,14 @@
       "3.8": {
         "upstream_branch": [
           "7.72.x",
-          "7.71.x"
+          "main"
         ],
         "disabled": true
       },
       "3.9": {
         "upstream_branch": [
-          "7.75.x",
-          "7.74.x"
+          "7.74.x",
+          "main"
         ],
         "disabled": false
       },
@@ -193,14 +193,14 @@
       "3.8": {
         "upstream_branch": [
           "7.72.x",
-          "7.71.x"
+          "main"
         ],
         "disabled": true
       },
       "3.9": {
         "upstream_branch": [
-          "7.75.x",
-          "7.74.x"
+          "7.74.x",
+          "main"
         ],
         "disabled": false
       },
@@ -390,15 +390,15 @@
       "3.8": {
         "upstream_branch": [
           "7.72.x",
-          "7.71.x"
+          "main"
         ],
         "node_version": "16.13.2",
         "disabled": true
       },
       "3.9": {
         "upstream_branch": [
-          "7.75.x",
-          "7.74.x"
+          "7.74.x",
+          "main"
         ],
         "node_version": "16.13.2",
         "disabled": false
@@ -423,14 +423,14 @@
       "3.8": {
         "upstream_branch": [
           "7.72.x",
-          "7.71.x"
+          "main"
         ],
         "disabled": true
       },
       "3.9": {
         "upstream_branch": [
-          "7.75.x",
-          "7.74.x"
+          "7.74.x",
+          "main"
         ],
         "disabled": false
       },
