CRW-4808 add slack_notification field to job-config.json and update script to enable notifications for numbered branches

--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -652,6 +652,12 @@
       "3.8": "1.22.19",
       "3.9": "1.22.19",
       "3.x": "1.22.19"
+    },
+    "slack_notification": {
+      "3.7": true,
+      "3.8": true,
+      "3.9": true,
+      "3.x": false
     }
   },
   "Copyright": [
