chore: add advisory number, CRW epic, and remove OCP 4.10 (also theia)

--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -533,13 +533,13 @@
   "Other": {
     "Errata": {
       "3.8": "116894",
-      "3.9": "n/a",
+      "3.9": "119896",
       "3.10": "n/a",
       "3.x": "n/a"
     },
     "Epic": {
       "3.8": "CRW-4586",
-      "3.9": "n/a",
+      "3.9": "CRW-4828",
       "3.10": "n/a",
       "3.x": "n/a"
     },
@@ -591,7 +591,6 @@
       "3.10": "next",
       "3.x": "next"
     },
-    "THEIA_BUILD_PARAMS": {},
     "OPENSHIFT_VERSIONS_SUPPORTED": {
       "3.8": [
         "v4.14",
@@ -604,22 +603,19 @@
         "v4.14",
         "v4.13",
         "v4.12",
-        "v4.11",
-        "v4.10"
+        "v4.11"
       ],
       "3.10": [
         "v4.14",
         "v4.13",
         "v4.12",
-        "v4.11",
-        "v4.10"
+        "v4.11"
       ],
       "3.x": [
         "v4.14",
         "v4.13",
         "v4.12",
-        "v4.11",
-        "v4.10"
+        "v4.11"
       ]
     },
     "OPENSHIFT_CONTENT_SET_VERSION": {
