--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -1,15 +1,8 @@
 {
   "Purpose": "To set configurations of jenkins jobs including upstream branches, dependencies and disabled status",
-  "Version": 3.9,
+  "Version": 3.10,
   "Jobs": {
     "code": {
-      "3.7": {
-        "upstream_branch": [
-          "7.67.x",
-          "7.66.x"
-        ],
-        "disabled": true
-      },
       "3.8": {
         "upstream_branch": [
           "7.72.x",
@@ -23,6 +16,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3.10": {
+        "upstream_branch": [
+          "7.76.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -33,13 +33,6 @@
       }
     },
     "configbump": {
-      "3.7": {
-        "upstream_branch": [
-          "7.67.x",
-          "7.66.x"
-        ],
-        "disabled": true
-      },
       "3.8": {
         "upstream_branch": [
           "7.72.x",
@@ -53,6 +46,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3.10": {
+        "upstream_branch": [
+          "7.76.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -63,13 +63,6 @@
       }
     },
     "dashboard": {
-      "3.7": {
-        "upstream_branch": [
-          "7.67.x",
-          "7.66.x"
-        ],
-        "disabled": true
-      },
       "3.8": {
         "upstream_branch": [
           "7.72.x",
@@ -83,6 +76,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3.10": {
+        "upstream_branch": [
+          "7.76.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -93,13 +93,6 @@
       }
     },
     "imagepuller": {
-      "3.7": {
-        "upstream_branch": [
-          "7.67.x",
-          "7.66.x"
-        ],
-        "disabled": true
-      },
       "3.8": {
         "upstream_branch": [
           "7.72.x",
@@ -113,6 +106,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3.10": {
+        "upstream_branch": [
+          "7.76.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -123,13 +123,6 @@
       }
     },
     "machineexec": {
-      "3.7": {
-        "upstream_branch": [
-          "7.67.x",
-          "7.66.x"
-        ],
-        "disabled": true
-      },
       "3.8": {
         "upstream_branch": [
           "7.72.x",
@@ -143,6 +136,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3.10": {
+        "upstream_branch": [
+          "7.76.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -153,13 +153,6 @@
       }
     },
     "operator": {
-      "3.7": {
-        "upstream_branch": [
-          "7.67.x",
-          "7.66.x"
-        ],
-        "disabled": true
-      },
       "3.8": {
         "upstream_branch": [
           "7.72.x",
@@ -173,6 +166,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3.10": {
+        "upstream_branch": [
+          "7.76.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -183,13 +183,6 @@
       }
     },
     "server": {
-      "3.7": {
-        "upstream_branch": [
-          "7.67.x",
-          "7.66.x"
-        ],
-        "disabled": true
-      },
       "3.8": {
         "upstream_branch": [
           "7.72.x",
@@ -204,6 +197,13 @@
         ],
         "disabled": false
       },
+      "3.10": {
+        "upstream_branch": [
+          "7.76.x",
+          "main"
+        ],
+        "disabled": true
+      },
       "3.x": {
         "upstream_branch": [
           "main",
@@ -213,13 +213,6 @@
       }
     },
     "devfileregistry": {
-      "3.7": {
-        "upstream_branch": [
-          "devspaces-3.7-rhel-8",
-          "devspaces-3.7-rhel-8"
-        ],
-        "disabled": true
-      },
       "3.8": {
         "upstream_branch": [
           "devspaces-3.8-rhel-8",
@@ -233,6 +226,13 @@
           "devspaces-3.9-rhel-8"
         ],
         "disabled": false
+      },
+      "3.10": {
+        "upstream_branch": [
+          "devspaces-3.10-rhel-8",
+          "devspaces-3.10-rhel-8"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -243,13 +243,6 @@
       }
     },
     "pluginregistry": {
-      "3.7": {
-        "upstream_branch": [
-          "devspaces-3.7-rhel-8",
-          "devspaces-3.7-rhel-8"
-        ],
-        "disabled": true
-      },
       "3.8": {
         "upstream_branch": [
           "devspaces-3.8-rhel-8",
@@ -263,6 +256,13 @@
           "devspaces-3.9-rhel-8"
         ],
         "disabled": false
+      },
+      "3.10": {
+        "upstream_branch": [
+          "devspaces-3.10-rhel-8",
+          "devspaces-3.10-rhel-8"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -273,13 +273,6 @@
       }
     },
     "idea": {
-      "3.7": {
-        "upstream_branch": [
-          "20221111",
-          "20221111"
-        ],
-        "disabled": true
-      },
       "3.8": {
         "upstream_branch": [
           "20221111",
@@ -293,6 +286,13 @@
           "20221111"
         ],
         "disabled": false
+      },
+      "3.10": {
+        "upstream_branch": [
+          "20221111",
+          "20221111"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -303,13 +303,6 @@
       }
     },
     "traefik": {
-      "3.7": {
-        "upstream_branch": [
-          "v2.9.6",
-          "v2.9.6"
-        ],
-        "disabled": true
-      },
       "3.8": {
         "upstream_branch": [
           "v2.9.6",
@@ -323,6 +316,13 @@
           "v2.9.6"
         ],
         "disabled": false
+      },
+      "3.10": {
+        "upstream_branch": [
+          "v2.9.6",
+          "v2.9.6"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -333,27 +333,20 @@
       }
     },
     "build-all-images": {
-      "3.7": {
-        "disabled": true
-      },
       "3.8": {
         "disabled": true
       },
       "3.9": {
         "disabled": false
       },
+      "3.10": {
+        "disabled": true
+      },
       "3.x": {
         "disabled": false
       }
     },
     "udi": {
-      "3.7": {
-        "upstream_branch": [
-          "devspaces-3.7-rhel-8",
-          "devspaces-3.7-rhel-8"
-        ],
-        "disabled": true
-      },
       "3.8": {
         "upstream_branch": [
           "devspaces-3.8-rhel-8",
@@ -367,6 +360,13 @@
           "devspaces-3.9-rhel-8"
         ],
         "disabled": false
+      },
+      "3.10": {
+        "upstream_branch": [
+          "devspaces-3.10-rhel-8",
+          "devspaces-3.10-rhel-8"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -379,14 +379,6 @@
   },
   "Management-Jobs": {
     "dsc": {
-      "3.7": {
-        "upstream_branch": [
-          "7.67.x",
-          "7.66.x"
-        ],
-        "node_version": "16.13.2",
-        "disabled": true
-      },
       "3.8": {
         "upstream_branch": [
           "7.72.x",
@@ -401,6 +393,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3.10": {
+        "upstream_branch": [
+          "7.76.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -411,13 +410,6 @@
       }
     },
     "operator-bundle": {
-      "3.7": {
-        "upstream_branch": [
-          "7.67.x",
-          "7.66.x"
-        ],
-        "disabled": true
-      },
       "3.8": {
         "upstream_branch": [
           "7.72.x",
@@ -431,6 +423,13 @@
           "main"
         ],
         "disabled": false
+      },
+      "3.10": {
+        "upstream_branch": [
+          "7.76.x",
+          "main"
+        ],
+        "disabled": true
       },
       "3.x": {
         "upstream_branch": [
@@ -441,70 +440,70 @@
       }
     },
     "get-sources-rhpkg-container-build": {
-      "3.7": {
-        "disabled": true
-      },
       "3.8": {
         "disabled": true
       },
       "3.9": {
         "disabled": false
+      },
+      "3.10": {
+        "disabled": true
       },
       "3.x": {
         "disabled": false
       }
     },
     "push-latest-container-to-quay": {
-      "3.7": {
-        "disabled": true
-      },
       "3.8": {
         "disabled": true
       },
       "3.9": {
         "disabled": false
+      },
+      "3.10": {
+        "disabled": true
       },
       "3.x": {
         "disabled": false
       }
     },
     "sync-to-downstream": {
-      "3.7": {
-        "disabled": true
-      },
       "3.8": {
         "disabled": true
       },
       "3.9": {
         "disabled": false
+      },
+      "3.10": {
+        "disabled": true
       },
       "3.x": {
         "disabled": false
       }
     },
     "update-digests": {
-      "3.7": {
-        "disabled": true
-      },
       "3.8": {
         "disabled": true
       },
       "3.9": {
         "disabled": false
+      },
+      "3.10": {
+        "disabled": true
       },
       "3.x": {
         "disabled": false
       }
     },
     "send-email-qe-build-list": {
-      "3.7": {
-        "disabled": true
-      },
       "3.8": {
         "disabled": true
       },
       "3.9": {
         "disabled": false
+      },
+      "3.10": {
+        "disabled": true
       },
       "3.x": {
         "disabled": true
@@ -513,92 +512,86 @@
   },
   "CSVs": {
     "operator-bundle": {
-      "3.7": {
-        "CSV_VERSION": "3.7.2",
-        "CSV_VERSION_PREV": "3.7.1"
-      },
       "3.8": {
         "CSV_VERSION": "3.8.0",
         "CSV_VERSION_PREV": "3.7.2"
       },
       "3.9": {
         "CSV_VERSION": "3.9.0",
-        "CSV_VERSION_PREV": "3.7.2"
+        "CSV_VERSION_PREV": "3.8.0"
+      },
+      "3.10": {
+        "CSV_VERSION": "3.10.0",
+        "CSV_VERSION_PREV": "3.8.0"
       },
       "3.x": {
-        "CSV_VERSION": "3.9.0",
-        "CSV_VERSION_PREV": "3.7.2"
+        "CSV_VERSION": "3.10.0",
+        "CSV_VERSION_PREV": "3.8.0"
       }
     }
   },
   "Other": {
     "Errata": {
-      "3.7": "118664",
       "3.8": "116894",
-      "3.9": "n/a",
+      "3.9": "119896",
+      "3.10": "n/a",
       "3.x": "n/a"
     },
     "Epic": {
-      "3.7": "CRW-4792",
       "3.8": "CRW-4586",
-      "3.9": "n/a",
+      "3.9": "CRW-4828",
+      "3.10": "n/a",
       "3.x": "n/a"
     },
     "FLOATING_QUAY_TAGS": {
-      "3.7": "latest",
       "3.8": "latest",
-      "3.9": "next",
+      "3.9": "latest",
+      "3.10": "next",
       "3.x": "next"
     },
     "DEV_WORKSPACE_CONTROLLER": {
-      "3.7": "v0.13.0",
       "3.8": "v0.13.0",
       "3.9": "v0.13.0",
+      "3.10": "v0.13.0",
       "3.x": "v0.13.0"
     },
     "DEV_HEADER_REWRITE_TRAEFIK_PLUGIN": {
-      "3.7": "v0.1.2",
       "3.8": "v0.1.2",
       "3.9": "v0.1.2",
+      "3.10": "v0.1.2",
       "3.x": "v0.1.2"
     },
     "gopls": {
-      "3.7": "gopls/v0.10.1",
       "3.8": "gopls/v0.10.1",
       "3.9": "gopls/v0.10.1",
+      "3.10": "gopls/v0.10.1",
       "3.x": "gopls/v0.10.1"
     },
     "xdebug": {
-      "3.7": "3.1.6",
       "3.8": "3.1.6",
       "3.9": "3.1.6",
+      "3.10": "3.1.6",
       "3.x": "3.1.6"
     },
     "kubedock": {
       "3.8": "0.11.0",
       "3.9": "0.11.0",
+      "3.10": "0.11.0",
       "3.x": "0.11.0"
     },
     "DEV_WORKSPACE_OPERATOR_TAG": {
-      "3.7": "0.21",
       "3.8": "0.21",
       "3.9": "0.21",
+      "3.10": "0.21",
       "3.x": "0.21"
     },
     "@eclipse-che/plugin-registry-generator": {
-      "3.7": "7.67.0",
       "3.8": "7.72.0",
       "3.9": "next",
+      "3.10": "next",
       "3.x": "next"
     },
-    "THEIA_BUILD_PARAMS": {},
     "OPENSHIFT_VERSIONS_SUPPORTED": {
-      "3.7": [
-        "v4.13",
-        "v4.12",
-        "v4.11",
-        "v4.10"
-      ],
       "3.8": [
         "v4.14",
         "v4.13",
@@ -610,51 +603,55 @@
         "v4.14",
         "v4.13",
         "v4.12",
-        "v4.11",
-        "v4.10"
+        "v4.11"
+      ],
+      "3.10": [
+        "v4.14",
+        "v4.13",
+        "v4.12",
+        "v4.11"
       ],
       "3.x": [
         "v4.14",
         "v4.13",
         "v4.12",
-        "v4.11",
-        "v4.10"
+        "v4.11"
       ]
     },
     "OPENSHIFT_CONTENT_SET_VERSION": {
-      "3.7": "4.12",
       "3.8": "4.12",
       "3.9": "4.12",
+      "3.10": "4.12",
       "3.x": "4.12"
     },
     "OCP_TOOLS_CONTENT_SET_VERSION": {
-      "3.7": "4.12",
       "3.8": "4.12",
       "3.9": "4.12",
+      "3.10": "4.12",
       "3.x": "4.12"
     },
     "GOLANG_VERSION": {
-      "3.7": "1.16.2",
       "3.8": "1.16.2",
       "3.9": "1.16.2",
+      "3.10": "1.16.2",
       "3.x": "1.16.2"
     },
     "NODE_VERSION": {
-      "3.7": "14.20.0",
       "3.8": "14.20.0",
       "3.9": "18.16.1",
+      "3.10": "18.16.1",
       "3.x": "18.16.1"
     },
     "YARN_VERSION": {
-      "3.7": "1.22.19",
       "3.8": "1.22.19",
       "3.9": "1.22.19",
+      "3.10": "1.22.19",
       "3.x": "1.22.19"
     },
     "slack_notification": {
-      "3.7": true,
       "3.8": true,
       "3.9": true,
+      "3.10": false,
       "3.x": false
     }
   },
